--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -47,8 +47,8 @@
       </div>
     </nav>
     <!--End-Navigation-->
-  <main id="main">
-    <!-- ======= Works Section ======= -->
+    <main id="main">
+    <!--Works Section-->
     <section class="section site-portfolio">
       <div class="container">
         <div class="row mb-5 align-items-center">
@@ -66,8 +66,8 @@
           </div>
         </div>
         <div id="portfolio-grid" class="row no-gutter">
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://nutricanis.live" class="item-wrap fancybox">
+          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center d-flex justify-content-center align-items-center">
+            <a href="https://nutricanis.live" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Nutricanis)</h3>
                 <span>Figma, Wordpress & Elementor Pro</span>
@@ -75,8 +75,8 @@
               <img class="img-fluid" alt="Nutricanis" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://defu.live" class="item-wrap fancybox">
+          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
+            <a href="https://defu.live" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Defu)</h3>
                 <span>Figma, Wordpress & Elementor Pro</span>
@@ -84,8 +84,8 @@
               <img class="img-fluid" alt="Defu" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://herrmanns.live/" class="item-wrap fancybox">
+          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
+            <a href="https://herrmanns.live/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite</h3>
                 <span>Figma, Wordpress & Elementor Pro (Herrmanns)</span>
@@ -93,8 +93,8 @@
               <img class="img-fluid" alt="Herrmanns" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://rosinasfinest.live/" class="item-wrap fancybox">
+          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
+            <a href="https://rosinasfinest.live/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Rosinas Finest)</h3>
                 <span>Figma, Wordpress & Elementor Pro</span>
@@ -102,8 +102,8 @@
               <img class="img-fluid" alt="Rosinas Finest" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://fraisl.live/" class="item-wrap fancybox">
+          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
+            <a href="https://fraisl.live/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Fraisl)</h3>
                 <span>Figma, Wordpress & Elementor Pro</span>
@@ -111,8 +111,8 @@
               <img class="img-fluid" alt="Fraisl" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://napani.live/" class="item-wrap fancybox">
+          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
+            <a href="https://napani.live/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Napani)</h3>
                 <span>Figma, Wordpress & Elementor Pro</span>
@@ -120,8 +120,8 @@
               <img class="img-fluid" alt="Napani" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://itweb.at/leistungen/messe-marketing/" class="item-wrap fancybox">
+          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
+            <a href="https://itweb.at/leistungen/messe-marketing/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>itweb Leistung´s Seite</h3>
                 <span>Figma, Wordpress & Advanced Costum Fields</span>
@@ -129,8 +129,8 @@
               <img class="img-fluid" alt="itweb Leistungen" src="../Grafiken/Portfolio/Itweb.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://itweb.at/glossar/" class="item-wrap fancybox">
+          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
+            <a href="https://itweb.at/glossar/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>itweb Glossar</h3>
                 <span>Figma, Wordpress & Advanced Costum Fields</span>
@@ -138,8 +138,8 @@
               <img class="img-fluid" alt="itweb Glossar" src="../Grafiken/Portfolio/Itweb.png">
             </a>
           </div>
-          <div class="item adobe col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/nvidia-logo-animation.html" class="item-wrap fancybox">
+          <div class="item adobe col-12 col-sm-6 col-lg-3">
+            <a href="Portfolio/nvidia-logo-animation.html" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Nvidia Logo Animation</h3>
                 <span>Adobe Illustrator & After Effects</span>
@@ -147,8 +147,8 @@
               <img class="img-fluid" src="../Grafiken/Portfolio/Nvidia.png">
             </a>
           </div>
-          <div class="item adobe col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/Cyberpunk-Asus.html" class="item-wrap fancybox">
+          <div class="item adobe col-12 col-sm-6 col-lg-3">
+            <a href="Portfolio/Cyberpunk-Asus.html" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Cyberpunk x Asus Strix RTX 3090 Werbe Video</h3>
                 <span>Adobe Premiere Pro & After Effects</span>
@@ -156,8 +156,8 @@
               <img class="img-fluid" src="../Grafiken/Portfolio/CyberpunkXAsus.png">
             </a>
           </div>
-          <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://github.com/Avatok/FiveM-Blips-v1" class="item-wrap fancybox">
+          <div class="item coding col-12 col-sm-6 col-lg-3">
+            <a href="https://github.com/Avatok/FiveM-Blips-v1" class="item-wrap text-center">
               <div class="work-info">
                 <h3>[Standalone] FiveM Blips v1</h3>
                 <span>Lua Scripting</span>
@@ -165,8 +165,8 @@
               <img class="img-fluid" alt="FiveM Blips v1" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
-          <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://github.com/Avatok/FiveM-Blips-v2" class="item-wrap fancybox">
+          <div class="item coding col-12 col-sm-6 col-lg-3">
+            <a href="https://github.com/Avatok/FiveM-Blips-v2" class="item-wrap text-center">
               <div class="work-info">
                 <h3>[Standalone] FiveM Blips v2</h3>
                 <span>Lua Scripting</span>
@@ -174,8 +174,8 @@
               <img class="img-fluid" alt="FiveM Blips v2" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
-          <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://github.com/Avatok/FiveM-Exec-Command-Ped" class="item-wrap fancybox">
+          <div class="item coding col-12 col-sm-6 col-lg-3">
+            <a href="https://github.com/Avatok/FiveM-Exec-Command-Ped" class="item-wrap text-center">
               <div class="work-info">
                 <h3>[Standalone] FiveM Exec Command Ped</h3>
                 <span>Lua Scripting</span>
@@ -183,8 +183,8 @@
               <img class="img-fluid" alt="FiveM Exec Command Ped" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
-          <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://github.com/Avatok/FiveM-Talking-Ped" class="item-wrap fancybox">
+          <div class="item coding col-12 col-sm-6 col-lg-3">
+            <a href="https://github.com/Avatok/FiveM-Talking-Ped" class="item-wrap text-center">
               <div class="work-info">
                 <h3>[Standalone] FiveM Talking Ped</h3>
                 <span>Lua Scripting</span>
@@ -192,8 +192,8 @@
               <img class="img-fluid" alt="FiveM Talking Ped" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
-          <div class="item other col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://www.feinesfutter.at/" class="item-wrap fancybox">
+          <div class="item other col-12 col-sm-6 col-lg-3">
+            <a href="https://www.feinesfutter.at/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Wordpress WooCoomerce Betreuung</h3>
                 <span>WooCoomerce Artikel einfügen, bearbeiten und löschen</span>
@@ -201,8 +201,8 @@
               <img class="img-fluid" alt="Feines Futter" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item coding web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://avatok.github.io/WebSnakeGame/" class="item-wrap fancybox">
+          <div class="item coding web col-12 col-sm-6 col-lg-3">
+            <a href="https://avatok.github.io/WebSnakeGame/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Web Snake Game</h3>
                 <span>HTML, CSS, JavaScript und Bootstrap</span>
@@ -210,15 +210,17 @@
               <img class="img-fluid" alt="Web Snake Game" src="../Grafiken/Portfolio/Snake.png">
             </a>
           </div>
-          <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="https://github.com/Avatok/Discord-WebHook-Writer" class="item-wrap fancybox">
+          <div class="item coding col-12 col-sm-6 col-lg-3">
+          </div>
+          <div class="item coding col-12 col-sm-6 col-lg-3">
+            <a href="https://github.com/Avatok/Discord-WebHook-Writer" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Discord WebHook Writer</h3>
                 <span>Python & Batch-Skriptsprache</span>
               </div>
               <img class="img-fluid" alt="Discord WebHook Writer" src="../Grafiken/Portfolio/Python.png">
             </a>
-           </div>
+          </div>
         </div>
       </div>
     </section>
