--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -77,7 +77,7 @@
                     </div>
 
                     <div class="col">
-                        <b>Philip Saul & Twinks</b><br>
+                        <b>Philip & Twinks</b><br>
                         <a href="https://www.youtube.com/@Philip_and_Twinks"><img src="../Grafiken/Social/Youtube.svg" alt="Youtube"></a>
                     </div>
                 </div>
