--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
         href="bs_8.19.2/css/bootstrap.min.css"
     />
     <!--Custom CSS-->
-    <link
-      rel="stylesheet"
-      href="CSS/style.css"
-      />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--Icons-->
     <link
       rel="stylesheet"
@@ -365,7 +362,7 @@
     </footer>
     <!--End-Footer-->
     <!--Java Script-->
-    <script src="bs_8.19.2/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="JavaScript/code.js"></script> 
 </body>
 </html>
