--- a/Unterseiten/Portfolio/nvidia-logo-animation.html
+++ b/Unterseiten/Portfolio/nvidia-logo-animation.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../../Grafiken/Icon.png"/>
     <!--BT CSS-->
-    <link
-        rel="stylesheet"
-        href="../../bs_8.19.2/css/bootstrap.min.css"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--Custom CSS-->
     <link
       rel="stylesheet"
@@ -86,11 +83,17 @@
             </div>
       </section>
     <!--End-Main-->
-<br>
-<br>
-<br>
-<br>
-<br>
+    
+    <!-- Call to Action -->
+    <section class="p-5 text-center">
+        <div class="container">
+            <h2>Interested in my work?</h2>
+            <p>Feel free to reach out to me via my contact page or follow me on my social media channels!</p>
+            <a href="../Contact.html" class="btn btn-lg rounded-pill" style="background-color: #caf8a3; color: #000;">Contact Me</a>
+        </div>
+    </section>
+    <!-- End Call to Action -->
+    
     <!--Footer-->
     <footer class="p-3 bg-dark text-white text-center">
       <div class="container">
@@ -115,8 +118,6 @@
     </footer>
     <!--End-Footer-->
   <!--Java Script-->
-  <script src="../../bs_8.19.2/js/bootstrap.bundle.min.js"></script> 
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-
 </html>
