--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -49,34 +49,32 @@
             <!-- Social Media Icons -->
             <div class="container">
                 <div class="row text-center">
-                    <div class="col">
+                    <div class="col-md-4 col-6">
                         <b>_avatok_</b><br>
                         <a href="https://www.instagram.com/_avatok_/"><img src="../Grafiken/Social/Instagram.svg" alt="IG"></a>
                     </div>
 
-                    <div class="col">
+                    <div class="col-md-4 col-6">
                         <b>Avatok_</b><br>
                         <a href="https://www.twitch.tv/avatok_"><img src="../Grafiken/Social/Twitch.svg" alt="Twitch"></a>
                     </div>
 
-                    <div class="col">
+                    <div class="col-md-4 col-6">
                         <b>Avatok</b><br>
                         <a href="https://www.youtube.com/@Avatok"><img src="../Grafiken/Social/Youtube.svg" alt="Youtube"></a>
                     </div>
-                </div>
 
-                <div class="row text-center">
-                    <div class="col">
+                    <div class="col-md-4 col-6">
                         <b>Avatok_</b><br>
                         <a href="https://de.fiverr.com/avatok_"><img src="../Grafiken/Social/Fiverr.svg" alt="Fiverr"></a>
                     </div>
 
-                    <div class="col">
+                    <div class="col-md-4 col-6">
                         <b>avatok</b><br>
                         <a href="https://github.com/Avatok"><img src="../Grafiken/Social/GitHub.svg" alt="Github"></a>
                     </div>
 
-                    <div class="col">
+                    <div class="col-md-4 col-6">
                         <b>Philip & Twinks</b><br>
                         <a href="https://www.youtube.com/@Philip_and_Twinks"><img src="../Grafiken/Social/Youtube.svg" alt="Youtube"></a>
                     </div>
@@ -159,4 +157,5 @@
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+
 </html>
