--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                     GPU - Nvidia Geforce GTX 1650Ti 4GB<br>
                     RAM - Kingston Furry 2x16GB (32GB) 3200Mhz<br>
                     Storage - 1TB + 512GB NVMe SSD (1,5TB)<br>
+<br>
+                    <b>Other Stuff:</b>
+                    Camera - Iphone 15 Pro Max<br>
                   </p>
                   </div>
                   </div>
