--- a/Unterseiten/Imprint.html
+++ b/Unterseiten/Imprint.html
@@ -23,7 +23,7 @@
     <!--Navigation-->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark p-3 sticky-top">
         <div class="container">
-        <img src="../Grafiken/Avatok.png" width="50" alt="NavAvatok" style="margin-right: 0.3rem;">
+        <img src="../Grafiken/Avatok2.png" width="50" alt="NavAvatok" style="margin-right: 0.3rem;">
         <a href="../index.html" class="navbar-brand">Avatok</a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenue" title="NavBarButton"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id='navmenue'>
