--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -273,7 +273,7 @@
             <p>Detailed overview of other things I want to improve</p>
             <ul class="list-unstyled list-line">
               <li>Joomla</li>
-              <li>C++ / C / C#</li>
+              <li>C++ / C / C# / Java</li>
               <li>Reaper (Audio)</li>
               <li>PC Configuration & Building</li>
               <li>...</li>
