--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -252,7 +252,7 @@
             <p>Detailed overview for Coding and Programming</p>
             <ul class="list-unstyled list-line">
               <li>Lua</li>
-              <li>Python (for micro controller)</li>
+              <li>Python</li>
             </ul>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
