--- a/Unterseiten/Contact.html
+++ b/Unterseiten/Contact.html
@@ -42,7 +42,6 @@
     </nav>
     <!--End-Navigation-->
 
-    <br>
     <!-- Main -->
     <div class="container-fluid d-flex justify-content-center align-items-center" style="height: 100vh;">
       <div class="container">
@@ -136,7 +135,7 @@
     </div>
 
     <!--Footer-->
-    <footer class="p-3 bg-dark text-white text-center fixed-bottom">
+    <footer class="p-3 bg-dark text-white text-center">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-4">
