--- a/Unterseiten/Contact.html
+++ b/Unterseiten/Contact.html
@@ -42,6 +42,7 @@
     </nav>
     <!--End-Navigation-->
 
+    <br>
     <!-- Main -->
     <div class="container-fluid d-flex justify-content-center align-items-center" style="height: 100vh;">
       <div class="container">
@@ -135,7 +136,7 @@
     </div>
 
     <!--Footer-->
-    <footer class="p-3 bg-dark text-white text-center">
+    <footer class="p-3 bg-dark text-white text-center fixed-bottom">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-4">
