--- a/Unterseiten/Contact.html
+++ b/Unterseiten/Contact.html
@@ -110,7 +110,7 @@
             
             <!-- Submit Button -->
             <div class="col-12 text-center">
-              <button type="submit" class="btn btn-primary m-3">Submit request</button>
+              <button type="submit" id="submitRequest" class="btn btn-primary m-3">Submit request</button>
             </div>
           </form>
         </section>
