--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="Grafiken/Icon.png"/>
     <!--BT CSS-->
-    <link
-        rel="stylesheet"
-        href="bs_8.19.2/css/bootstrap.min.css"
-    />
-    <!--Custom CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--Custom CSS-->
+    <link
+      rel="stylesheet"
+      href="CSS/style.css"
+      />
     <!--Icons-->
     <link
       rel="stylesheet"
@@ -23,7 +23,7 @@
     <!--Navigation-->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark p-3 sticky-top">
         <div class="container">
-        <img src="Grafiken/Avatok2.png" width="50" alt="NavAvatok" style="margin-right: 0.3rem;">
+        <img src="Grafiken/Avatok.png" width="50" alt="NavAvatok" style="margin-right: 0.3rem;">
         <a href="#" class="navbar-brand">Avatok</a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenue"><span class="navbar-toggler-icon" title="NavBarButton"></span></button>
             <div class="collapse navbar-collapse" id='navmenue'>
@@ -140,9 +140,6 @@
                     GPU - Nvidia Geforce GTX 1650Ti 4GB<br>
                     RAM - Kingston Furry 2x16GB (32GB) 3200Mhz<br>
                     Storage - 1TB + 512GB NVMe SSD (1,5TB)<br>
-<br>
-                    <b>Other Stuff:</b>
-                    Camera - Iphone 15 Pro Max<br>
                   </p>
                   </div>
                   </div>
