--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenue"><span class="navbar-toggler-icon" title="NavBarButton"></span></button>
             <div class="collapse navbar-collapse" id='navmenue'>
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a href="#" class="nav-link">Startseite</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="Unterseiten/Portfolio.html" class="nav-link">Portfolio</a></li>
                     <li class="nav-item"><a href="Unterseiten/Services.html" class="nav-link">Services</a></li>
                     <li class="nav-item"><a href="Unterseiten/SocialMedia.html" class="nav-link">Social Media</a></li>
