--- a/Unterseiten/Imprint.html
+++ b/Unterseiten/Imprint.html
@@ -28,7 +28,7 @@
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenue" title="NavBarButton"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id='navmenue'>
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a href="../Index.html" class="nav-link">Startseite</a></li>
+                    <li class="nav-item"><a href="../Index.html" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="Portfolio.html" class="nav-link">Portfolio</a></li>
                     <li class="nav-item"><a href="Services.html" class="nav-link">Services</a></li>
                     <li class="nav-item"><a href="SocialMedia.html" class="nav-link">Social Media</a></li>
