--- a/Unterseiten/Contact.html
+++ b/Unterseiten/Contact.html
@@ -43,7 +43,7 @@
 
     <br>
     <!-- Main -->
-    <div class="container-fluid d-flex justify-content-center align-items-center" style="height: 100vh;">
+    <div class="container-fluid d-flex justify-content-center align-items-center">
       <div class="container">
         <h2 class="text-center">Contact Form</h2>
         <p class="text-center">Fields with * are required</p>
