--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -208,6 +208,13 @@
             </a>
           </div>
           <div class="item coding col-12 col-sm-6 col-lg-3">
+            <a href="https://avatok.github.io/Small_JS_Projects/" class="item-wrap text-center">
+              <div class="work-info">
+                <h3>Small JavaScript Projects</h3>
+                <span>HTML & Java Script</span>
+              </div>
+              <img class="img-fluid" alt="Small JavaScript Projects" src="../Grafiken/Portfolio/JS.png">
+            </a>
           </div>
           <div class="item coding col-12 col-sm-6 col-lg-3">
             <a href="https://github.com/Avatok/Discord-WebHook-Writer" class="item-wrap text-center">
