--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -213,7 +213,7 @@
                 <h3>Small JavaScript Projects</h3>
                 <span>HTML & Java Script</span>
               </div>
-              <img class="img-fluid" alt="Small JavaScript Projects" src="../Grafiken/Portfolio/JS.png">
+              <img class="img-fluid" alt="Small JavaScript Projects" src="../Grafiken/Portfolio/JavaScript.png">
             </a>
           </div>
           <div class="item coding col-12 col-sm-6 col-lg-3">
@@ -230,7 +230,7 @@
     </section>
     <!-- End  Works Section -->
 
-    <!-- ======= Services Section ======= -->
+  <main id="main">
     <section class="section services">
       <div class="container">
         <div class="row justify-content-center text-center mb-4">
@@ -258,8 +258,9 @@
             <h4 class="h4 mb-2">Coding</h4>
             <p>Detailed overview for Coding and Programming</p>
             <ul class="list-unstyled list-line">
-              <li>Lua</li>
-              <li>Python</li>
+              <li>Python (I am still Learning)</li>
+              <li>XXX</li>
+              <li>XXX</li>
             </ul>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
@@ -267,7 +268,7 @@
             <h4 class="h4 mb-2">Adobe Media Design</h4>
             <p>Detailed overview for Adobe Media Design and Adobe Creative Cloud</p>
             <ul class="list-unstyled list-line">
-              <li>Photoshgop</li>
+              <li>Photoshop</li>
               <li>Premiere Pro</li>
               <li>After Effects</li>
               <li>Illustrator</li>
@@ -279,11 +280,9 @@
             <h4 class="h4 mb-2">Other</h4>
             <p>Detailed overview of other things I want to improve</p>
             <ul class="list-unstyled list-line">
-              <li>Joomla</li>
-              <li>C++ / C / C# / Java</li>
-              <li>Reaper (Audio)</li>
-              <li>PC Configuration & Building</li>
-              <li>...</li>
+              <li>XXX</li>
+              <li>XXX</li>
+              <li>XXX</li>
             </ul>
           </div>
         </div>
