--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -52,18 +52,9 @@
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" >
             <h2>Hey, I'm Pascal</h2>
           </div>
-          <div class="col-md-12 col-lg-6 text-start text-lg-end">
-            <div id="filters" class="filters">
-              <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".web">Web Development & Design</a>
-              <a href="#" data-filter=".coding">Coding</a>
-              <a href="#" data-filter=".adobe">Adobe Media Design</a>
-              <a href="#" data-filter=".other">Other</a>
-            </div>
-          </div>
         </div>
         <div id="portfolio-grid" class="row no-gutter">
-          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center d-flex justify-content-center align-items-center">
+          <div class="item col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center d-flex justify-content-center align-items-center">
             <a href="https://nutricanis.live" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Nutricanis)</h3>
@@ -72,7 +63,7 @@
               <img class="img-fluid" alt="Nutricanis" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
+          <div class="item col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
             <a href="https://defu.live" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Defu)</h3>
@@ -81,7 +72,7 @@
               <img class="img-fluid" alt="Defu" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
+          <div class="item col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
             <a href="https://herrmanns.live/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite</h3>
@@ -90,7 +81,7 @@
               <img class="img-fluid" alt="Herrmanns" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
+          <div class="item col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
             <a href="https://rosinasfinest.live/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Rosinas Finest)</h3>
@@ -99,7 +90,7 @@
               <img class="img-fluid" alt="Rosinas Finest" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
+          <div class="item col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
             <a href="https://fraisl.live/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Fraisl)</h3>
@@ -108,7 +99,7 @@
               <img class="img-fluid" alt="Fraisl" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
+          <div class="item col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
             <a href="https://napani.live/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite (Napani)</h3>
@@ -117,7 +108,7 @@
               <img class="img-fluid" alt="Napani" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
+          <div class="item col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
             <a href="https://itweb.at/leistungen/messe-marketing/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>itweb Leistung´s Seite</h3>
@@ -126,7 +117,7 @@
               <img class="img-fluid" alt="itweb Leistungen" src="../Grafiken/Portfolio/Itweb.png">
             </a>
           </div>
-          <div class="item web col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
+          <div class="item col-12 col-sm-6 col-lg-3 d-flex justify-content-center align-items-center">
             <a href="https://itweb.at/glossar/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>itweb Glossar</h3>
@@ -135,7 +126,7 @@
               <img class="img-fluid" alt="itweb Glossar" src="../Grafiken/Portfolio/Itweb.png">
             </a>
           </div>
-          <div class="item adobe col-12 col-sm-6 col-lg-3">
+          <div class="item col-12 col-sm-6 col-lg-3">
             <a href="Portfolio/nvidia-logo-animation.html" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Nvidia Logo Animation</h3>
@@ -144,7 +135,7 @@
               <img class="img-fluid" src="../Grafiken/Portfolio/Nvidia.png">
             </a>
           </div>
-          <div class="item adobe col-12 col-sm-6 col-lg-3">
+          <div class="item col-12 col-sm-6 col-lg-3">
             <a href="Portfolio/Cyberpunk-Asus.html" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Cyberpunk x Asus Strix RTX 3090 Werbe Video</h3>
@@ -153,7 +144,7 @@
               <img class="img-fluid" src="../Grafiken/Portfolio/CyberpunkXAsus.png">
             </a>
           </div>
-          <div class="item coding col-12 col-sm-6 col-lg-3">
+          <div class="item col-12 col-sm-6 col-lg-3">
             <a href="https://github.com/Avatok/FiveM-Blips-v1" class="item-wrap text-center">
               <div class="work-info">
                 <h3>[Standalone] FiveM Blips v1</h3>
@@ -162,7 +153,7 @@
               <img class="img-fluid" alt="FiveM Blips v1" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
-          <div class="item coding col-12 col-sm-6 col-lg-3">
+          <div class="item col-12 col-sm-6 col-lg-3">
             <a href="https://github.com/Avatok/FiveM-Blips-v2" class="item-wrap text-center">
               <div class="work-info">
                 <h3>[Standalone] FiveM Blips v2</h3>
@@ -171,7 +162,7 @@
               <img class="img-fluid" alt="FiveM Blips v2" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
-          <div class="item coding col-12 col-sm-6 col-lg-3">
+          <div class="item col-12 col-sm-6 col-lg-3">
             <a href="https://github.com/Avatok/FiveM-Exec-Command-Ped" class="item-wrap text-center">
               <div class="work-info">
                 <h3>[Standalone] FiveM Exec Command Ped</h3>
@@ -180,7 +171,7 @@
               <img class="img-fluid" alt="FiveM Exec Command Ped" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
-          <div class="item coding col-12 col-sm-6 col-lg-3">
+          <div class="item col-12 col-sm-6 col-lg-3">
             <a href="https://github.com/Avatok/FiveM-Talking-Ped" class="item-wrap text-center">
               <div class="work-info">
                 <h3>[Standalone] FiveM Talking Ped</h3>
@@ -189,7 +180,7 @@
               <img class="img-fluid" alt="FiveM Talking Ped" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
-          <div class="item other col-12 col-sm-6 col-lg-3">
+          <div class="item col-12 col-sm-6 col-lg-3">
             <a href="https://www.feinesfutter.at/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Wordpress WooCoomerce Betreuung</h3>
@@ -198,7 +189,7 @@
               <img class="img-fluid" alt="Feines Futter" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
-          <div class="item coding web col-12 col-sm-6 col-lg-3">
+          <div class="item col-12 col-sm-6 col-lg-3">
             <a href="https://avatok.github.io/WebSnakeGame/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Web Snake Game</h3>
@@ -207,7 +198,7 @@
               <img class="img-fluid" alt="Web Snake Game" src="../Grafiken/Portfolio/Snake.png">
             </a>
           </div>
-          <div class="item coding col-12 col-sm-6 col-lg-3">
+          <div class="item col-12 col-sm-6 col-lg-3">
             <a href="https://avatok.github.io/Small_JS_Projects/" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Small JavaScript Projects</h3>
@@ -216,7 +207,7 @@
               <img class="img-fluid" alt="Small JavaScript Projects" src="../Grafiken/Portfolio/JavaScript.png">
             </a>
           </div>
-          <div class="item coding col-12 col-sm-6 col-lg-3">
+          <div class="item col-12 col-sm-6 col-lg-3">
             <a href="https://github.com/Avatok/Discord-WebHook-Writer" class="item-wrap text-center">
               <div class="work-info">
                 <h3>Discord WebHook Writer</h3>
@@ -313,10 +304,6 @@
       </div>
     </footer>
     <!--End-Footer-->
-  <!-- Vendor JS Files -->
-  <script src="../JavaScript/isotope.pkgd.min.js"></script>
-  <!-- Portfolio CSS -->
-  <script src="../JavaScript/portfolio.js"></script>
   <!--Java Script-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
