--- a/index.html
+++ b/index.html
@@ -140,6 +140,15 @@
                     GPU - Nvidia Geforce GTX 1650Ti 4GB<br>
                     RAM - Kingston Furry 2x16GB (32GB) 3200Mhz<br>
                     Storage - 1TB + 512GB NVMe SSD (1,5TB)<br>
+<br>
+                    <b>Server:</b><br>
+                    CPU - Intel Core i5 8400<br>
+                    Cooler - Endorfy Fera 5 Schwarz
+                    GPU - Intel UHD 630<br>
+                    MB - MSI H310M Pro-VDH Plus<br>
+                    RAM - Crucial 1x16GB (16GB) 2666Mhz<br>
+                    Storage - 240GB SSD + 4TB HDD + 1TB HDD<br>
+                    Case - Montech AIR 100 LITE Black
                   </p>
                   </div>
                   </div>
