--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
                   <div class="accordion-body">
                   <p>
                     <b>Desktop PC:</b><br>
-                    CPU - AMD Ryzen 9 5900x<br>
-                    AIO - Corsair ICUE H150i Elite Capellix (Push Pull Configuration)<br>
-                    GPU - ASUS Rog Strix Geforce RTX 3090 24GB<br>
-                    MB - ASUS B550-E Gaming<br>
-                    RAM - Corsair Vengeance RGB 4x16GB (64GB) 3600Mhz<br>
-                    Storage - 512GB + 2TB m.2 NVMe SSD + 1TB SATA SSD (3,5TB)<br>
-                    Case - Lian Li O11 Dynamic in black<br>
-                    Fans: 9x Corsair QL120 + 3 Corsair ML120 (Push/Pull Configuration)<br>
-                    PSU: Corsair RM850x 80 Plus Gold<br>
+                    CPU - TBD<br>
+                    AIO - TBD<br>
+                    GPU - TBD<br>
+                    MB - TBD<br>
+                    RAM - TBD<br>
+                    Storage - 512GB + 2TB m.2 NVMe SSD<br>
+                    Case - TBD<br>
+                    Fans: TBD<br>
+                    PSU: TBD<br>
 <br>
                     <b>Monitor Setup:</b><br>
                     1x Artic Z3 Pro Gen3<br>
@@ -126,29 +126,35 @@
                     2x LG 27GN800P-B (27" - 144hz - 2.560 x 1.440 Pixel)<br>
                     1x Thomson 32HU3253C (32" - 60hz - 1920 x 1080 Pixel)<br>
 <br>
-                    <b>Peripherie:</b><br>
+                    <b>Peripherie Setup:</b><br>
                     Keyboard - Corsair K70 RGB MK.2 Low Profile<br>
                     Mice - Corsair M65 RGB Elite<br>
                     Headset - Beyerdynamic DT 770 Pro (80 Ohm)<br>
-                    Microphone - AUNA MIC 900B<br>
-                    Speaker - Logitech Z906<br>
-                    Special Gadget - Elgato Stream Deck<br>
+                    Microphone - Auna Mic 900B<br>
+                    Speaker - JBL Partybox Stage 320 (Schwarz)<br>
+                    Gadget 1 - Elgato Stream Deck<br>
                     Webcam - Streamplify Cam (FullHD/60FPS)<br>
+<br>
 <br>
                     <b>Notebook:</b><br>
                     CPU - AMD Ryzen 5 4600H<br>
                     GPU - Nvidia Geforce GTX 1650Ti 4GB<br>
                     RAM - Kingston Furry 2x16GB (32GB) 3200Mhz<br>
-                    Storage - 1TB + 512GB NVMe SSD (1,5TB)<br>
+                    Storage - 1TB + 512GB m.2 NVMe SSD (1,5TB)<br>
+<br>
 <br>
                     <b>Server:</b><br>
                     CPU - Intel Core i5 8400<br>
-                    Cooler - Endorfy Fera 5 Schwarz
+                    Cooler - Endorfy Fera 5 Schwarz<br>
                     GPU - Intel UHD 630<br>
                     MB - MSI H310M Pro-VDH Plus<br>
                     RAM - Crucial 1x16GB (16GB) 2666Mhz<br>
                     Storage - 240GB SSD + 4TB HDD + 1TB HDD<br>
                     Case - Montech AIR 100 LITE Black
+<br>
+<br>
+                    <b>Other Stuff:</b>
+                    Camera - IPhone 15 Pro Max <br>
                   </p>
                   </div>
                   </div>
