--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     GPU - TBD<br>
                     MB - TBD<br>
                     RAM - TBD<br>
-                    Storage - 512GB + 2TB m.2 NVMe SSD<br>
+                    Storage - 512GB + 2TB m.2 NVMe SSD + 2TB External HDD (4,5TB)<br>
                     Case - TBD<br>
                     Fans: TBD<br>
                     PSU: TBD<br>
@@ -133,27 +133,28 @@
                     Microphone - Auna Mic 900B<br>
                     Speaker - JBL Partybox Stage 320 (Schwarz)<br>
                     Gadget 1 - Elgato Stream Deck<br>
+                    Gadget 2 - Elgato Key Light Air<br>
                     Webcam - Streamplify Cam (FullHD/60FPS)<br>
 <br>
 <br>
-                    <b>Notebook:</b><br>
+                    <b>Notebook Hardware:</b><br>
                     CPU - AMD Ryzen 5 4600H<br>
                     GPU - Nvidia Geforce GTX 1650Ti 4GB<br>
                     RAM - Kingston Furry 2x16GB (32GB) 3200Mhz<br>
                     Storage - 1TB + 512GB m.2 NVMe SSD (1,5TB)<br>
 <br>
 <br>
-                    <b>Server:</b><br>
+                    <b>Server Hardware:</b><br>
                     CPU - Intel Core i5 8400<br>
                     Cooler - Endorfy Fera 5 Schwarz<br>
                     GPU - Intel UHD 630<br>
                     MB - MSI H310M Pro-VDH Plus<br>
                     RAM - Crucial 1x16GB (16GB) 2666Mhz<br>
-                    Storage - 240GB SSD + 4TB HDD + 1TB HDD<br>
+                    Storage - 240GB Sata SSD + 4TB Sata HDD (4,24TB)<br>
                     Case - Montech AIR 100 LITE Black
 <br>
 <br>
-                    <b>Other Stuff:</b>
+                    <b>Other Stuff:</b><br>
                     Camera - IPhone 15 Pro Max <br>
                   </p>
                   </div>
