--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     GPU - TBD<br>
                     MB - TBD<br>
                     RAM - TBD<br>
-                    Storage - 512GB + 2TB m.2 NVMe SSD + 2TB External HDD (4,5TB)<br>
+                    Storage - TBD<br>
                     Case - TBD<br>
                     Fans: TBD<br>
                     PSU: TBD<br>
