--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="col-md p-5">
               <h2 id="typing-effect">Pascal - Avatok</h2>
               <p class="lead">
-                Hello, my name is Avatok (Pascal) and I'm 19 years old.
+                Hello, my name is Avatok (Pascal) and I'm 20 years old.
               </p>
               <p class="lead">
                 I live in Austria and have been working with computer hardware and software since my youth. I have completed a degree in information technology.
@@ -83,9 +83,9 @@
                       <h3>Main Information</h3>
                     <ul>
                       <li><b>Name: </b> Pascal</li>
-                      <li><b>Age: </b> 19</li>
-                      <li><b>Place of residence: </b> austria</li>
-                      <li><b>Work: </b> I am in a School</li>
+                      <li><b>Age: </b> 20</li>
+                      <li><b>Residence: </b> austria</li>
+                      <li><b>Work: </b> Student</li>
                     </ul>
                       <h3>Languages</h3>
                     <ul>
