--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <img src="Grafiken/Avatok.png" alt="Avatok" class="img-fluid d-none d-sm-block" style="width:500px">
           </div>
           <div class="col-md p-5">
-              <h2 id="typing-effect">Pascal - Avatok</h2>
+              <h2>Pascal - Avatok</h2>
               <p class="lead">
                 Hello, my name is Avatok (Pascal) and I'm 20 years old.
               </p>
