--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                 Hello, my name is Avatok (Pascal) and I'm 20 years old.
               </p>
               <p class="lead">
-                I live in Austria and have been working with computer hardware and software since my youth. I have completed a degree in information technology.
+                I live in Austria and have been working with computer hardware and software since my youth.
+                I completed a 3.5-year school program in Information Technology, including a thesis.
               </p>
               <a class="btn btn-light mt-3" id="Q1" onclick="ScrollDown()" data-bs-toggle="collapse" data-bs-target="#question-one">
                 <i class="bi bi-chevron-right">Read More</i>
