--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
               </p>
               <p class="lead">
                 I live in Austria and have been working with computer hardware and software since my youth.
-                I completed a 3.5-year school program in Information Technology, including a thesis.
               </p>
               <a class="btn btn-light mt-3" id="Q1" onclick="ScrollDown()" data-bs-toggle="collapse" data-bs-target="#question-one">
                 <i class="bi bi-chevron-right">Read More</i>
@@ -92,6 +91,12 @@
                     <ul>
                         <li>German / Deutsch</li>
                         <li>English / Englisch</li>
+                    </ul>
+                        <h3>School Career</h3>
+                    <ul>
+                        <li>9 years of compulsory schooling</li>
+                        <li>3.5 years of technical school for Information Technology, including the thesis</li>
+                        <li>I am currently attending a preparatory course for the Matura in Computer Science</li>
                     </ul>
                       <h3>Certifications</h3>
                     <ul>
