--- a/index.html
+++ b/index.html
@@ -116,15 +116,18 @@
                   <div class="accordion-body">
                   <p>
                     <b>Desktop PC:</b><br>
-                    CPU - TBD<br>
-                    AIO - TBD<br>
-                    GPU - TBD<br>
-                    MB - TBD<br>
-                    RAM - TBD<br>
-                    Storage - TBD<br>
-                    Case - TBD<br>
-                    Fans: TBD<br>
-                    PSU: TBD<br>
+                    CPU - Ryzen 9 9900x (12C/24T)R<br>
+                    AIO - Lian Li Hydroshift LCD 360 ARGB<br>
+                    GPU - Palit RTX 4070 12GB GDDR6<br>
+                    MB - Gigabyte B850 AORUS ELITE WIFI7<br>
+                    RAM - 4x G.SKILL 16GB DDR5 6000MHz CL30<br>
+                    SSD1 - KIOXIA Exceria Plus G4 1TB - PCIe 5.0<br>
+                    SSD2 - Crucial P3 Plus 2TB - PCIe 4.0<br>
+                    HDD1 - Intenso Memory Case 2TB - USB 3.0
+                    Case - Lian Li O11 Vision Compact Black<br>
+                    Fans - 2x Lian Li UNI FAN SL Wireless Black<br>
+                    Reverse Fans - 6x Lian Li UNI FAN SL Wireless Reverse Black<br>
+                    PSU - Lian Li Edge Gold 850W<br>
 <br>
                     <b>Monitor Setup:</b><br>
                     1x Artic Z3 Pro Gen3<br>
