--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
                   <div class="accordion-body">
                   <p>
                     <b>Desktop PC:</b><br>
-                    CPU - Ryzen 9 9900x (12C/24T)R<br>
+                    CPU - Ryzen 9 9900x (12C/24T)<br>
                     AIO - Lian Li Hydroshift LCD 360 ARGB<br>
                     GPU - Palit RTX 4070 12GB GDDR6<br>
                     MB - Gigabyte B850 AORUS ELITE WIFI7<br>
                     RAM - 4x G.SKILL 16GB DDR5 6000MHz CL30<br>
                     SSD1 - KIOXIA Exceria Plus G4 1TB - PCIe 5.0<br>
                     SSD2 - Crucial P3 Plus 2TB - PCIe 4.0<br>
-                    HDD1 - Intenso Memory Case 2TB - USB 3.0
+                    HDD1 - Intenso Memory Case 2TB - USB 3.0<br>
                     Case - Lian Li O11 Vision Compact Black<br>
                     Fans - 2x Lian Li UNI FAN SL Wireless Black<br>
                     Reverse Fans - 6x Lian Li UNI FAN SL Wireless Reverse Black<br>
